[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

# members = ["crates/blockifier", "crates/native_blockifier"]
members = ["crates/blockifier"]

[workspace.package]
version = "0.8.0-rc.1"
edition = "2021"
repository = "https://github.com/starkware-libs/blockifier/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.0"
ark-ec = "0.4.2"
ark-ff = "0.4.0-alpha.7"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
assert_matches = "1.5.0"
cached = "0.44.0"
cairo-lang-casm = { git = "https://github.com/LKozlowski/cairo", rev = "84f9bc38f2d6930c763ad5046f1671c3618f3fa0" }
cairo-lang-runner = { git = "https://github.com/LKozlowski/cairo", rev = "84f9bc38f2d6930c763ad5046f1671c3618f3fa0" }
cairo-lang-starknet-classes = { git = "https://github.com/LKozlowski/cairo", rev = "84f9bc38f2d6930c763ad5046f1671c3618f3fa0" }
cairo-lang-utils = { git = "https://github.com/LKozlowski/cairo", rev = "84f9bc38f2d6930c763ad5046f1671c3618f3fa0" }
# cairo-vm = "1.0.0-rc5"
# cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "37ea72977dccbc2b90b8b7534c1edabd2e2fef79" }
# 1.0.0-rc5
# cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "309c8a7d3cdfd0bb766b4888be66ec4b482ecaf4" }
# cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "681d35a6ce0d404a00ec5ba05029514c8a3c53c8" }
# cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", branch = "main" }
# wasm32-rev5
cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "83ca53382cd022aa1cbb2dd9a447bdfc8eeee0cd" }
# wasm32-rev6
# cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "e3e59db69e31bd13dc4acdab83d6667345d15db5" }
criterion = "0.3"
derive_more = "0.99.17"
glob = "0.3.1"
indexmap = "2.1.0"
itertools = "0.10.3"
keccak = "0.1.3"
log = "0.4"
num-bigint = "0.4"
num-integer = "0.1.45"
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
once_cell = "1.19.0"
papyrus_storage = "0.4.0-dev.4"
paste = "1.0.15"
phf = { version = "0.11", features = ["macros"] }
pretty_assertions = "1.2.1"
pyo3 = "0.19.1"
pyo3-log = "0.8.1"
rand = "0.8"
regex = "1.10.4"
rstest = "0.17.0"
serde = "1.0.184"
serde_json = "1.0.81"
sha2 = "0.10.8"
sha3 = "0.10.6"
starknet-types-core = { version = "0.1.5", features = ["hash", "prime-bigint"] }
starknet_api = "0.13.0-rc.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tempfile = "3.7.0"
test-case = "2.2.2"
thiserror = "1.0.37"
tikv-jemallocator = "0.5.4"

[workspace.lints.rust]
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"
warnings = "deny"

[workspace.lints.clippy]
as_conversions = "deny"

[patch.crates-io]
# wasm32-rev5
cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "83ca53382cd022aa1cbb2dd9a447bdfc8eeee0cd" }
# wasm32-rev6
# cairo-vm = { git = "https://github.com/LKozlowski/cairo-vm/", rev = "e3e59db69e31bd13dc4acdab83d6667345d15db5" }
